[gd_scene load_steps=4 format=3 uid="uid://cbr4p2nb82fi1"]

[ext_resource type="Script" uid="uid://cs7s3cek6afah" path="res://Scripts/deck_settings.gd" id="1_1nuyr"]
[ext_resource type="StyleBox" uid="uid://brx00us83uw3f" path="res://Styles/panel.tres" id="1_qj8ji"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1nuyr"]
bg_color = Color(0.224905, 0.224905, 0.224905, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Deck Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1nuyr")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_qj8ji")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Top Bar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Top Bar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.77
text = "Choose deck settings:"

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Top Bar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="Start" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Top Bar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1nuyr")

[node name="Margins" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Margins"]
layout_mode = 2

[node name="Settings" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Margins/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="User Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Margins/HBoxContainer/Settings"]
layout_mode = 2
text = "Deck Order:"

[node name="OrderOption" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Margins/HBoxContainer/Settings"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "In Order"
popup/item_0/id = 0
popup/item_1/text = "Random"
popup/item_1/id = 1

[node name="ListContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Margins/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Margins/HBoxContainer/ListContainer"]
layout_mode = 2
text = "Sentences in deck:"

[node name="Sentences" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/Margins/HBoxContainer/ListContainer"]
unique_name_in_owner = true
layout_mode = 2
auto_width = true
auto_height = true

[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Top Bar/Back" to="." method="_on_back_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Top Bar/Start" to="." method="_on_start_button_down"]
